--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@adonisjs/static": "^1.1.1",
     "@adonisjs/vite": "^3.0.0",
     "@vinejs/vine": "^2.1.0",
+    "chart.js": "^4.4.3",
     "edge.js": "^6.0.2",
     "luxon": "^3.5.0",
     "mysql2": "^3.11.0",
