--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@japa/plugin-adonisjs": "^3.0.1",
     "@japa/runner": "^3.1.4",
     "@swc/core": "^1.6.5",
+    "@types/axios": "^0.14.0",
     "@types/luxon": "^3.4.2",
     "@types/node": "^20.14.9",
     "autoprefixer": "^10.4.20",
@@ -63,6 +64,7 @@
     "@adonisjs/static": "^1.1.1",
     "@adonisjs/vite": "^3.0.0",
     "@vinejs/vine": "^2.1.0",
+    "axios": "^1.7.3",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.3",
     "edge.js": "^6.0.2",
